# setup_logging

./: .gitignore  Cargo.toml  readme.md  readme.typ  rustfmt.toml
.github/workflows/: on tag release on GitHub.yaml  on tag release on Github.yaml  on tag release on github.yaml
src/: lib.rs
