[package]
authors     = ["9-FS <pray4spam@googlemail.com>"]
categories  = []
description = "a clean logging setup for the `log` crate using `fern`"
edition     = "2021"
exclude     = [".github/", "readme.pdf"]                               # additional to .gitignore
keywords    = []
license     = "MIT"
name        = "setup_logging"
readme      = "readme.typ"
repository  = "https://github.com/9-FS/setup_logging"
version     = "2.1.1"

[dependencies]
chrono               = "^0.4.20"
fern                 = { features = ["colored"], version = "^0.6.0" }
log                  = "^0.4.0"
unicode-segmentation = "^1.0.0"
